--- a/components/styles/weatherContainer.css
+++ b/components/styles/weatherContainer.css
@@ -1,8 +1,8 @@
 .container{
     
     width: 100%;
-    background: linear-gradient(to right, #AD36CB 10%, #333333  );
-    filter: drop-shadow(1px 3px 3px #cecdcd);
+    background: linear-gradient(to right, #202b3b 10%, #0b131e  );
+    filter: drop-shadow(1px 3px 3px #faf6f6);
     backdrop-filter: blur(100px);
     gap: 30px;
     border-radius: 30px;
@@ -39,8 +39,8 @@
 
 
 .box img{
-    height: 40px;
-    width: 30px;
+    height: 60px;
+    width: 40px;
 }
 
 
